tests/NormalTests/paczka1/fuzzy1/29701103.err
Error in line 14: 6CZr A135 25,0
Error in line 17: 6CZr S692 22,1
Error in line 26: CNBvuAUHI5 S804 89,0
Error in line 32: 4OQ1f A135 9,66
Error in line 10: fBvKJDV6ct S804 3,6
